--- a/microservices/python_services/form/templates/index.html
+++ b/microservices/python_services/form/templates/index.html
@@ -23,7 +23,6 @@
         .num {
             width: 50px;
             height: 50px;
-            justify-content: ;
         }
     </style>
 </head>
@@ -42,7 +41,7 @@
     <form class="row">
         <div class="col-md-6 mb-3">
             <label for="getSerial" class="form-label">Serial Number*</label>
-            <input type="email" class="form-control" id="getSerial" placeholder="16-characters number" required>
+            <input type="text" class="form-control" id="getSerial" placeholder="16-characters number" required>
         </div>
         <div class="col-md-6 mb-3">
             <label for="getEmail" class="form-label">Email Address*</label>
@@ -51,7 +50,7 @@
 
         <div class="col-md-6 mb-3">
             <label for="getReason" class="form-label">Reason for Claim*</label>
-            <input type="email" class="form-control" id="getReason" placeholder="Please provide your reason" required>
+            <input type="text" class="form-control" id="getReason" placeholder="Please provide your reason" required>
         </div>
         <div class="col-md-6 mb-3">
             <label for="formFile" class="form-label">Proof of Purchase*</label>
