other client side UI
incomplete

--- a/microservices/python_services/form/templates/apply.html
+++ b/microservices/python_services/form/templates/apply.html
@@ -27,6 +27,29 @@
     </style>
 </head>
 <body> 
+    <!--Navigation bar-->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/apply">GPU Warranty</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/apply">Claim Form</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/label">Shipping Label</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/alternative">Alternative</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <!--Rest of Page-->
    <div class="container-fluid" id="header"> 
     <div>
         <h1 class="display-2 col text-white">Warranty Claims</h1>
