--- a/microservices/python_services/form/templates/alternative.html
+++ b/microservices/python_services/form/templates/alternative.html
@@ -24,6 +24,9 @@
             width: 50px;
             height: 50px;
         }
+        span.asterisk {
+            color: red;
+        }
     </style>
 </head>
 <body>
