--- a/microservices/python_services/form/templates/label.html
+++ b/microservices/python_services/form/templates/label.html
@@ -24,6 +24,10 @@
             width: 50px;
             height: 50px;
         }
+
+        span.asterisk {
+            color: red;
+        }
     </style>
 </head>
 <body>
@@ -55,7 +59,7 @@
             <h1 class="display-2 col text-white">Create Your Shipping Label</h1>
         </div>
         <div>
-            <h6 class="display-9 col-8 text-white fw-lighter">Fill in your address to create your shipping label</h6>
+            <h6 class="display-9 col-8 text-white fw-lighter">Fill in your address to create your shipping label. Your replacement GPU will reach you in a few days' time!</h6>
             <div class="col"></div>
         </div>
        </div>
@@ -63,13 +67,18 @@
        <div class="container px-5 py-4 align-items-center justify-content-center bg-white">
         <form class="row">
             <div class="col-md-6 mb-3">
-                <label for="getSerial" class="form-label">Serial Number*</label>
+                <label for="getCase" class="form-label">Case Number <span class="asterisk">*</span> </label>
+                <input type="text" class="form-control" id="getCase" placeholder="16-characters number" required>
+            </div>
+            
+            <div class="col-md-6 mb-3">
+                <label for="getSerial" class="form-label">Serial Number <span class="asterisk">*</span></label>
                 <input type="text" class="form-control" id="getSerial" placeholder="16-characters number" required>
             </div>
-    
-            <div class="col-md-6 mb-3">
-                <label for="getReason" class="form-label">Address</label>
-                <input type="text" class="form-control" id="getReason" placeholder="Please provide your address" required>
+
+            <div class="col-md-12 mb-3">
+                <label for="getAddress" class="form-label">Return Address <span class="asterisk">*</span></label>
+                <input type="text" class="form-control" id="getAddress" placeholder="Please provide your return address" required>
             </div>
             
             <div class="col-md-12 text-center">
