--- a/microservices/python_services/form/templates/label.html
+++ b/microservices/python_services/form/templates/label.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Warranty Claim Form</title>
+    <title>Submit Return Address</title>
     <style>
         #header{
             background-image:url("/static/image1.png");
@@ -86,5 +86,6 @@
             </div>
         </form>
        </div>
+       <label id="error" class="text-danger"></label>
 </body>
 </html>
