--- a/microservices/python_services/form/templates/apply.html
+++ b/microservices/python_services/form/templates/apply.html
@@ -49,6 +49,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/alternative">Alternative</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/requeststatus">Update Request Status</a>
+              </li>
             </ul>
           </div>
         </div>
