--- a/microservices/python_services/form/templates/request.html
+++ b/microservices/python_services/form/templates/request.html
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-success" @click="updateSure()">Submit Changes</button>
+                            <button type="submit" class="btn btn-success" @click="updateSure()" data-bs-dismiss="modal">Submit Changes</button>
                             <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
                         </div>
                     </form>
